ARROW-10642: [R] Can't get Table from RecordBatchReader with 0 batches

Closes #8956 from nealrichardson/zero-batches

Authored-by: Neal Richardson <neal.p.richardson@gmail.com>
Signed-off-by: Neal Richardson <neal.p.richardson@gmail.com>